toolchain/internal/core/analysis/testdata/errors/includes/import_invalid_filename/main.vdl
// @expect: E006
// @expect: E007

include "./Bad_file.vdl"

type MainType {
  name string
}
